--- a/homework5/style.css
+++ b/homework5/style.css
@@ -1,30 +1,27 @@
 
  th,td {
     width: 900px;
-    border: 1px solid rgb(131, 130, 130);
+    border: none;
     border-collapse: collapse;
-    color: rgb(161, 161, 161);
-    border-radius: 6px;
+    color: #aaaaaa;
+   
   } 
 
   table {
     width: 900px;
-    border: 1px solid rgb(131, 130, 130);
+    border: 1px solid rgb(73, 72, 72);
     border-collapse: collapse;
-    color: rgb(161, 161, 161);
-    border-radius: 6px;
+    color: rgb(69, 69, 69);
+
   }
 
   th, td {
-    background-color: #343333;
+    background-color: rgb(75, 73, 73);
     padding-top: 8px;
     padding-bottom: 8px;
     padding-left: 8px;
   }
 
-  .td {
-    border-style: none;
-  }
   th {
     text-align: left;
     color: rgb(247, 250, 253);
@@ -50,6 +47,8 @@
   background-color: #585858;
 }
 
-.border-radius {
-  border-radius: 10px;
+.tablett {
+  display: flex;
+  border: 1px solid#a50808;
+  border-radius: 6px;
 }
