--- a/homework6/css/style.css
+++ b/homework6/css/style.css
@@ -10,7 +10,7 @@
     width: 1600px;
     height: 4500px;
     background-color: rgb(248, 248, 248);
-    margin-left: 30%;
+    margin-left: auto;
   
 }
 
