--- a/homework9/style.css
+++ b/homework9/style.css
@@ -1,5 +1,10 @@
-body {
-    background-color: cadetblue;
+main {
+    width: 100%;
+    max-width: 1440px;
+    max-height: 4028px;
+    margin: 0 auto;
+    overflow: hidden;
+    background-color: #a2efb9;
 }
 .header {
     box-sizing: border-box;
@@ -7,9 +12,8 @@ body {
 position: absolute;
 width: 1440px;
 height: 665px;
-left: 20px;
-top: 20px;
-
+flex-direction: row;
+flex-direction: column;
 background: #F4F6F9;
 }
 .header_text {
@@ -148,5 +152,167 @@ font-weight: 400;
 font-size: 18px;
 line-height: 26px;
 color: #4F4F4F;
+}
 
+
+
+.section_2 {
+    box-sizing: border-box;
+position: absolute;
+width: 1440px;
+height: 592px;
+flex-direction: row;
+flex-direction: column;
+margin-top: 662px;
+display: flex;
+}
+
+.ronaldo {
+position: absolute;
+width: 805px;
+height: 592px;
+left: 0px;
+background: linear-gradient(270deg, #FFFFFF 5.16%, rgba(255, 255, 255, 0) 67.14%), rgba(255, 255, 255, 0.5);
+display: flex;
+flex-direction: row;
+position: relative;
+}
+
+.arsenal {
+       position: absolute;
+   z-index: 2;
+   width: 360px;
+height: 218.06px;
+left: 90px;
+top: 160px;
+
+}
+
+.video_pos {
+   z-index: 1;
+   position: absolute;
+width: 282px;
+height: 151.27px;
+left: 270px;
+top: 300px;
+}
+
+.andere_scrin_2 {
+    position: absolute;
+width: 635px;
+height: 592px;
+left: 805px;
+}
+
+h3 {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 21px;
+color: #00ADEE;
+margin-top: 133px;
+
+}
+
+h2 {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 700;
+font-size: 28px;
+line-height: 37px;
+color: #333333;
+margin-top: 27px;
+}
+
+.section2_tex {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 23px;
+color: #4F4F4F;
+}
+
+.lern_more_tex {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 21px;
+color: #00ADEE;
+margin-top: 22px;
+text-decoration: none;
+}
+
+.section_3 {
+    box-sizing: border-box;
+
+position: absolute;
+    width: 1440px;
+    height: 716px;
+    top: 1257px;
+    flex-direction: row;
+    flex-direction: column;
+
+    display: flex;
+}
+
+
+.third-section {
+    margin-left: 162px;
+margin-top: 217px;
+width: 480px;
+height: 291px;
+
+
+position: relative;
+}
+
+.section3_h3 {
+    margin-top: 0px;
+}
+.mobile_phone {
+    position: absolute;
+    
+    height: 513px;
+margin-left: 20%;
+    margin-top: 8%;
+    display: flex;
+   
+}
+
+
+.phone_futbol {
+    margin-left: 1440px;
+}
+
+.section_4 {
+    position: absolute;
+    width: 1440px;
+    height: 735px;
+    top: 1973px;
+    background: #00ADEE;
+}
+
+
+
+
+.section_grid4 {
+    position: fixed;
+}
+
+.section_grid4 {
+    display: grid; 
+    grid-template-columns: repeat(3, 50px);
+    grid-template-rows: repeat(3, 50px);
+    gap: 40px;
+    justify-content: center;
+    position: relative
+}
+.word9 {
+    width: 50px;
+    height: 50px;
+    background-color: rgb(187, 205, 27);
+    position: relative;
 }
