--- a/homework9/style.css
+++ b/homework9/style.css
@@ -254,7 +254,7 @@ position: absolute;
     top: 1257px;
     flex-direction: row;
     flex-direction: column;
-
+    background-image: url("../homework9/image/SAMPLE05.png");
     display: flex;
 }
 
@@ -292,7 +292,8 @@ margin-left: 20%;
     width: 1440px;
     height: 735px;
     top: 1973px;
-    background: #00ADEE;
+    background-image: url("../homework9/image/Group\ 696.png");
+    display: flex;
 }
 
 
@@ -304,15 +305,403 @@ margin-left: 20%;
 
 .section_grid4 {
     display: grid; 
-    grid-template-columns: repeat(3, 50px);
-    grid-template-rows: repeat(3, 50px);
+    grid-template-columns: repeat(3, 315px);
+    grid-template-rows: repeat(3, 163px);
     gap: 40px;
-    justify-content: center;
-    position: relative
+    margin-left: 14%;
+    position: relative;
+    margin-top: 10%;
+ 
+    
 }
 .word9 {
-    width: 50px;
-    height: 50px;
-    background-color: rgb(187, 205, 27);
+    width: 315px;
+    height: 163px;
+
     position: relative;
+}
+
+.tex_header {
+    position: absolute;
+width: 650px;
+height: 37px;
+display: flex;
+margin-top: 2%;
+justify-content: center;
+margin-left: 30%;
+
+
+}
+
+.header4_tex {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 37px;
+color: #FFFFFF;
+}
+
+.tex_description4 {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 23px;
+color: #FFFFFF;
+}
+
+.scrin_section4 {
+    width: 40px;
+height: 40px;
+}
+
+.section5 {
+    position: absolute;
+width: 1440px;
+height: 431px;
+top: 2514px;
+display: flex;
+background-color: rgb(255, 255, 255);
+}
+.header_mainsection_5_sloder {
+    position: absolute;
+width: 252px;
+height: 37px;
+left: 594px;
+}
+.section5_slider {
+    width: 90%;
+    margin-top: 8.5%;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+  }
+  
+  .slider_box5 {
+    border: 1px solid #828282;
+    border-radius: 4px;
+    margin: 0 0.3%;
+    padding: 40px 13px 24px 17px;
+    display: flex;
+    flex-direction: column;
+    height: 120px !important;
+  }
+  .main_section4_slider {
+    width: 90%;
+    margin-top: 9.5%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .main_section4_slider_box {
+    border: 1px solid #828282;
+    border-radius: 4px;
+    margin: 0 0.3%;
+    padding: 15px 13px 24px 17px;
+    display: flex;
+    flex-direction: column;
+    height: 161px !important;
+  }
+  
+  .main_section4_slider_box:hover {
+    border: 3px solid #00adee;
+  }
+  
+  .main_section4_slider_box_description {
+    font-family: "Lato";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+    color: #4f4f4f;
+    margin-top: 15px;
+  }
+  .img_section5_sleder {
+    position: absolute;
+width: 30px;
+height: 30px;
+background: url(image/Ellipse.png);
+border: none;
+display: flex;
+  }
+  .name_p {
+    position: relative;
+width: 104px;
+height: 20px;
+background-color: #a2efb9;
+display: flex;
+margin-left: 45px;
+margin-top: 4px;
+  }
+  .Darren_Wilson {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #333333;
+    position: fixed;
+    margin-top: 0px;
+  }
+
+  .twiter_section5 {
+    position: absolute;
+width: 15px;
+height: 12px;
+margin-left: 300px;
+display: flex;
+margin-top: -7px;
+  }
+
+  .pext_p_section5 {
+    position: absolute;
+width: 279px;
+height: 37px;
+display: flex;
+margin-top: 4px;
+  }
+
+.p_text {
+    font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 18px;
+color: #4F4F4F;
+}
+
+
+  
+
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section_6 {
+    position: absolute;
+width: 1440px;
+height: 278px;
+top: 2947px;
+display: flex;
+
+}
+
+.sport_image_club {
+    position: absolute;
+    width: 1081px;
+    height: 58px;
+    display: flex;
+    top: 60%;
+    left: 15%;
+
+    gap: 20px;
+    justify-content: space-between;
+
+
+}
+.sport_image_club img {
+    height: 70%;
+    margin-bottom: 10%;
+    gap: 5px;
+}
+
+.h_section6 {
+    position: absolute;
+width: 320px;
+height: 37px;
+display: flex;
+
+margin: 3%;
+left: 36%;
+}
+
+.section_7 {
+    width: 1440px;
+height: 483px;
+top: 3227px;
+position: absolute;
+display: flex;
+}
+
+.img_section_7 {
+    width: 666px;
+height: 483px;
+position: absolute;
+display: flex;
+background-image: url("../homework9/image/Frame\ 2.png");
+}
+
+.h_tex_section7 {
+    position: absolute;
+    width: 554px;
+    height: 37px;
+    left: 743px;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 37px;
+    color: #333333;
+    display: flex;
+    top: 15%;
+    
+}
+.p_tex_section7 {
+    position: absolute;
+width: 535px;
+height: 125px;
+left: 743px;
+font-family: 'Lato';
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 25px;
+color: #4F4F4F;
+display: flex;
+top: 35%;
+}
+
+.appstore_section7 {
+    box-sizing: border-box;
+    position: absolute;
+    width: 156.05px;
+    height: 47px;
+    left: 743px;
+    top: 200px;
+    border-radius: 7.33503px;
+    display: flex;
+    top: 75%;
+    opacity: .8;
+    cursor: pointer;
+    border: none;
+
+}
+.playmarket_section7 {
+box-sizing: border-box;
+
+position: absolute;
+width: 156.05px;
+height: 47px;
+left: 934.95px;
+top: 75%;
+border-radius: 7.33503px;
+display: flex;
+opacity: .8;
+cursor: pointer;
+border: none;
+}
+
+.img_app_sec7 {
+    position: absolute;
+    width: 156.05px;
+    height: 47px;
+    right: 0%;
+    top: 0%;
+
+}
+.img_androin_sec7 {
+        position: absolute;
+    width: 156.05px;
+    height: 47px;
+    right: 0%;
+    top: 0%;
+
+}
+
+.section_8{
+    position: absolute;
+    width: 1440px;
+    height: 127px;
+    top: 3704px;
+    background: #00ADEE;
+    
+}
+
+.logo_8section {
+    position: absolute;
+width: 99px;
+height: 32px;
+left: 163px;
+font-family: 'Product Sans';
+font-size: 24px;
+line-height: 29px;
+letter-spacing: -0.02em;
+color: #FFFFFF;
+top: 40%;
+display: flex;
+}
+
+.using_panel8 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    position: absolute;
+    left: 40%;
+    top: 40%;
+
+}
+
+
+.using_panel8 ul{
+    display: flex;
+    width: 100%;
+    gap: 1%;
+    text-decoration: non
+}
+.using_panel8 a{
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 21px;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.social_media_sec8 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+
+}
+
+.social_media_sec8 ul {
+    display: flex;
+    width: 100%;
+    gap: 1%;
+    text-decoration: none;
+    left: 80%;
+    position: absolute;
+    top: 40%;
 }
